test/fail/array_index_type.zn
# ERRORS: 1
# Array index must be int
func main() {
    var arr = [1, 2, 3]
    var x = arr[true]
    0
}
